<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="F_DecodeDeformationPoint" Id="{35d944e7-27af-430e-88d8-837c1562c337}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_DecodeDeformationPoint : ST_DeformationPointAccurate
VAR_INPUT
  sPoint      : ST_DeformationPoint;  // point
  nResolution : UDINT;                // resolution scale (factor)
END_VAR
VAR
  nReso : UDINT;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[nReso := SEL(nResolution=0, nResolution, 1);

F_DecodeDeformationPoint.index := sPoint.index;
F_DecodeDeformationPoint.col   := sPoint.col;
F_DecodeDeformationPoint.row   := sPoint.row;
F_DecodeDeformationPoint.x_ref := TO_LREAL(sPoint.x_ref) / nReso;
F_DecodeDeformationPoint.y_ref := TO_LREAL(sPoint.y_ref) / nReso;
F_DecodeDeformationPoint.dx    := TO_LREAL(sPoint.dx) / nReso;
F_DecodeDeformationPoint.dy    := TO_LREAL(sPoint.dy) / nReso;
F_DecodeDeformationPoint.valid := SEL(sPoint.valid>0, FALSE, TRUE);
]]></ST>
    </Implementation>
    <LineIds Name="F_DecodeDeformationPoint">
      <LineId Id="57" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="66" Count="0" />
      <LineId Id="64" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="24" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>